Fixed issues with IDCS and OIDC provider. (#1313)
* Fixed issues with IDCS and OIDC provider.
Cookie now configured to prevent infinite redirects.
WebServer security for scopes works as it should.
MP integration with WebServer security works as it should.
Examples are clearly separated between SE and MP.

Signed-off-by: Tomas Langer <tomas.langer@oracle.com>

* Review changes

Signed-off-by: Tomas Langer <tomas.langer@oracle.com>

* Using strict Same-Site when frontend and identity hosts match.

Signed-off-by: Tomas Langer <tomas.langer@oracle.com>